2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* c_src/exmpp_compress.h, c_src/exmpp_compress_zlib.c,
	c_src/exmpp_tls.h, c_src/exmpp_tls_openssl.c, c_src/Makefile.am: Use
	exmpp_driver.c and remove duplicate code.

	* c_src/exmpp_xml_expat_legacy.c, c_src/exmpp_xml_libxml2.c,
	c_src/exmpp_xml_expat.c: style(9).

	* src/core/exmpp_stringprep.erl: When a binary() is given in argument,
	return a binary() too. If the result of STRINGPREP is the same as the
	original string, return the latter and throw away the former; thanks
	to Pablo Polvorin.

	* c_src/exmpp_stringprep.c, c_src/Makefile.am: Use exmpp_driver.h.
	Remove start/stop callbacks and the private data structure as they're
	unused. Rename commands to COMMAND_*.

	* c_src/exmpp_stringprep.c: style(9).

2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	Fixed several warnings issued by Intel C Compiler.

	NOTE: With current options, code produced by this compiler is much
	bigger for no performance gain.

	* c_src/exmpp_driver.h, c_src/exmpp_xml.h: Fix "old-style" prototypes.

	* c_src/exmpp_driver.c: prime_table_length must be static.
	(exmpp_ht_dump_keys): Fix a printf(3) format string to properly handle
	an unsigned int.

	* c_src/exmpp_xml.h, c_src/exmpp_xml.c,
	c_src/exmpp_xml_expat_legacy.c: Remove unused arguments.

	* c_src/exmpp_xml.c: known_*_index must be static.

	* c_src/exmpp_xml_expat.c, c_src/exmpp_xml_expat_legacy.c:
	exmpp_xml_cb_make_attributes must be static. Expat error code is an
	enum, not a generic integer.
	
	* c_src/exmpp_xml_expat.c, c_src/exmpp_xml_expat_legacy.c,
	c_src/exmpp_xml_libxml2.c: When affecting bin->orig_bytes[0], cast the
	original integer to char to acknowledge the loss of precision.

2008-12-05  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>

	* src/core/exmpp_xmlstream.erl (start/3): Fix a bug where 'endtag' was
	not renamed to 'emit_endtag'.

	* c_src/exmpp_xml_expat.c: Fix a bug with parser reset: the context
	was not reset.
