@@ -14,6 +14,9 @@ if (WScript.Arguments.length  != 1) {
 	re_start = /^# Generated by/;
 	re = /^[^#]/;
 
+	/* We need a dictionnary to filter out duplicates. */
+	dict = new ActiveXObject("Scripting.Dictionary");
+
 	/* Fill in the Erlang header file. */
 	WScript.Echo("% $Id$");
 
@@ -23,8 +26,10 @@ if (WScript.Arguments.length  != 1) {
 			WScript.Echo("% " + line + "\n");
 			WScript.Echo("-define(XMPP_KNOWN_ELEMS, [");
 		}
-		if (line.match(re))
+		if (!dict.Exists(line) && line.match(re)) {
 			WScript.Echo("  '" + line + "',");
+			dict.Add(line, 1);
+		}
 	}
 	WScript.Echo("  '$end_of_table'");
 	WScript.Echo("]).");
