@@ -1,3 +1,13 @@
+2008-12-09  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* include/internal/exmpp_known_nss.hrl.awk,
+	include/internal/exmpp_known_nss.hrl.js,
+	include/internal/exmpp_known_elems.hrl.awk,
+	include/internal/exmpp_known_elems.hrl.js,
+	include/internal/exmpp_known_attrs.hrl.awk,
+	include/internal/exmpp_known_attrs.hrl.js: Fix headers generation to
+	remove duplicates. Thanks to Pablo Polvorin.
+
 2008-12-08  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* c_src/exmpp_compress.h, c_src/exmpp_compress_zlib.c,
